--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -12,20 +12,20 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/item_tv_initial"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:id="@+id/item_tv_initial"
-            android:textSize="30dp"
-            android:padding="4dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
-            tools:text="H"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@android:color/darker_gray"
             android:gravity="center"
+            android:padding="4dp"
+            android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="H" />
 
         <TextView
             android:layout_width="wrap_content"
